@@ -111,6 +111,7 @@
      * Added nozzle diameter info to api/v1/info
      * TLS is changed from int to bool
      * Added endpoint for capture an image from a camera
+     * Fixed check for negative temperatures of nozzle and bed
 
 0.6.0 (2021-12-17)
     * Added endpoint for control of extruder
